Fix problème de scrollbars qui n'apparaissent pas

--- a/plugins/rltable/table_editor.css
+++ b/plugins/rltable/table_editor.css
@@ -1,3 +1,7 @@
+body, html {
+	overflow: visible !important;
+}
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -20,6 +24,7 @@ table.rl-table td {
 	background-color: rgba(255,255,255,0.3);
 	font-family: Verdana, Arial, Helvetica, "Liberation Sans", FreeSans, sans-serif;
 	font-size: 95%;
+	min-width: 100px;
 }
 
 table.rl-table td.blank-cell {
